syntax = "proto3";

package ark_node.v1;

message AccountInfo {
  string namespace = 1;
  string label = 2;
  string derivation_path = 3;
  string xpubs = 4;
}

message BlockDetails {
  string hash = 1;
  uint64 height = 2;
  int64 timestamp = 3;
}

message BuildInfo {
  string version = 1;
  string commit = 2;
  string date = 3;
}

message Fees {
  uint64 boltz = 1;
  uint64 network = 2;
}

message Input {
  string txid = 1;
  uint32 vout = 2;
}

message Node {
  string txid = 1;
  string tx = 2;
  string parent_txid = 3;
}

message Output {
  string address = 1;
  uint64 amount = 2;
}

message Round {
  string id = 1;
  int64 start = 2;
  int64 end = 3;
  string round_tx = 4;
  Tree congestion_tree = 5;
  repeated string forfeit_txs = 6;
  repeated string connectors = 7;
}

message TransactionInfo {
  string date = 1;
  uint64 amount = 2;
  string round_txid = 3;
}

message Tree {
  repeated TreeLevel levels = 1;
}

message TreeLevel {
  repeated Node nodes = 1;
}

message Vtxo {
  Input outpoint = 1;
  Output receiver = 2;
  bool spent = 3;
  string round_txid = 4;
  string spent_by = 5;
  int64 expire_at = 6;
  bool swept = 7;
}

enum RoundEventType {
  ROUND_EVENT_TYPE_UNSPECIFIED = 0;
  ROUND_EVENT_TYPE_BROADCASTED = 1;
  ROUND_EVENT_TYPE_UNCONFIRMED = 2;
  ROUND_EVENT_TYPE_CONFIRMED = 3;
}

enum WebhookEventType {
  WEBHOOK_EVENT_TYPE_UNSPECIFIED = 0;
  WEBHOOK_EVENT_TYPE_ROUND = 1;
}
